--- a/blog.html
+++ b/blog.html
@@ -294,13 +294,41 @@
                             <br><br> &emsp; &emsp;If we want to build a new habit, it is important to take control over existing ones. It could be hard because they are mostly subconscious and you are doing it automatically.
                             <br><br> &emsp; &emsp;The main idea of this chapter is that for establishing a new habit it is important to write down when and where you will do it and not just randomly do it without planning. 
                             <br><br> &emsp; &emsp;Author’s favourite approach is called habit stacking. The idea is that the new habit should be included in or after an existing one.
-
-
                         </p>
                         <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article8" data-layout="" data-size="">
                             <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article8&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="about" class="section" >
+    <div class="container"  >
+        <div class="row">
+            <div class="col-md-12">
+                <!-- DETAILS -->
+                <div id="about-card" class="card" data-sr-id="49" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; transition: box-shadow 0.25s ease 0s, transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; ">
+                    <div class="card-content">
+                        <!-- ABOUT PARAGRAPH -->
+                        <h3 style="text-align: center;" id="article9" >My first month @ IBM </h3>
+                        <h5 style="text-align: center;"> 2023-03-18</h5>
+                        
+                        <p class="blog-blog">
+                            &emsp; &emsp;On March the 1st it has been exactly a month since I started at IBM. Maybe a month is not a long time but many things have happened. Let me share with you a few experiences and feelings that I have had during this period of time.
+                            <br><br> &emsp; &emsp;Maybe it’s good to say at the beginning that I’m not a big fan of changes and I have to face a really big one. Without changes you can’t really move yourself forward. My first day was beyond my expectations. On that day I didn’t know what to expect. Yet, eventually, everything went smoothly. I got an introduction to the company, picked up my work device and finally met my team. My manager even took me out for lunch. It was nice, heh.
+                            <br><br> &emsp; &emsp;My biggest fear was, and probably to some extent still is, my English. IBM is an international company so it has branches, teams and customers all around the world. So it is only natural that the company’s language is English. I’m not a native speaker, but I've been trying my whole life to surround myself with the English language. But one thing is listening and reading and another is writing and speaking. Even this blog is an attempt to improve my English.
+                            <br><br> &emsp; &emsp;Thankfully, I have got great colleagues that help me when I’m struggling with something, they are willing to explain every question that I have and so I’m very happy and thankful for that. Every day I learn something new and useful and I believe that I will succeed on the journey I’ve got myself onto.
+                        </p>
+
+                        <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article9" data-layout="" data-size="">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article9&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                                <img  og:image:width  og:image:height src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
+                            </a>
+                            
                         </div>
                     </div>
                 </div>
