--- a/blog.html
+++ b/blog.html
@@ -314,7 +314,7 @@
                 <div id="about-card" class="card" data-sr-id="49" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; transition: box-shadow 0.25s ease 0s, transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; ">
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
-                        <h3 style="text-align: center;" id="article9" >My first month @ IBM </h3>
+                        <h3 style="text-align: center;" id="IBM" >My first month @ IBM </h3>
                         <h5 style="text-align: center;"> 2023-03-18</h5>
                         
                         <p class="blog-blog">
@@ -324,8 +324,8 @@
                             <br><br> &emsp; &emsp;Thankfully, I have got great colleagues that help me when I’m struggling with something, they are willing to explain every question that I have and so I’m very happy and thankful for that. Every day I learn something new and useful and I believe that I will succeed on the journey I’ve got myself onto.
                         </p>
 
-                        <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article9" data-layout="" data-size="">
-                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article9&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                        <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#IBM" data-layout="" data-size="">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23IBM&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img  og:image:width  og:image:height src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                             
