added new article

--- a/blog.html
+++ b/blog.html
@@ -337,6 +337,37 @@
         </div>
     </div>
 </div>
+<div id="about" class="section" >
+    <div class="container"  >
+        <div class="row">
+            <div class="col-md-12">
+                <!-- DETAILS -->
+                <div id="about-card" class="card" data-sr-id="49" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: box-shadow 0.25s ease 0s, -webkit-transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; transition: box-shadow 0.25s ease 0s, transform 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s, opacity 1.4s cubic-bezier(0.6, 0.2, 0.1, 1) 0.5s; ">
+                    <div class="card-content">
+                        <!-- ABOUT PARAGRAPH -->
+                        <h3 style="text-align: center;" id="article9" >Atomic Habits, James Clear, Tiny Changes-Remarkable Results, Chapter 6</h3>
+                        <h5 style="text-align: center;"> 2023-03-18</h5>
+                        
+                        <p class="blog-blog">
+                            &emsp; &emsp;The 6th chapter starts with an example from real life. A primary care physician Anne Thorndike proved that it is possible to improve eating habits without changing the motivation or willpower of hospital staff and visitors but the change happened by reorganising the cafeteria.
+                            <br><br> &emsp; &emsp;Every living being senses and understands the world differently. We, as human beings, are counting on our senses, such as sight, hearing, touch, smell and taste. Our most powerful sense is sight. This is the reason why even a small change of what you see, may have a big impact on what you do.
+                            <br><br> &emsp; &emsp;As we have learned in the earlier chapter, every habit is initiated by a cue. For building new habits it is important to make these cues obvious and visible. We have to prepare our environment for that. If you want to read more put books in a visible place.
+                            <br><br> &emsp; &emsp;My biggest fear was, and probably to some extent still is, my English. IBM is an international company so it has branches, teams and customers all around the world. So it is only natural that the company’s language is English. I’m not a native speaker, but I've been trying my whole life to surround myself with the English language. But one thing is listening and reading and another is writing and speaking. Even this blog is an attempt to improve my English.
+                            <br><br> &emsp; &emsp;Over time, the habit will be associated with the entire context surrounding the behaviour. Habits are connected with a specific location. New locations are better for creating new habits. I’m not saying that you have to buy a new house but you may buy a new chair and put it on the unused corner in your room. You will create a new place for a new habit, and you will associate that place with this habit.
+                        </p>
+
+                        <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article9" data-layout="" data-size="">
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article9&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
+                                <img  og:image:width  og:image:height src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
+                            </a>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--==========================================
                      SCROLL TO TOP
