--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,9 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
 
+    <title>Welcome on my Blog</title>
+    <link rel="icon" href="./web_cv/faviconB-32x32.png">
+
     <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/sk_SK/sdk.js#xfbml=1&version=v16.0" nonce="1dTyfinH"></script>
 
