Added Photos into Blog

--- a/blog.html
+++ b/blog.html
@@ -91,6 +91,9 @@
                         <!-- ABOUT PARAGRAPH -->
                         <h3 style="text-align: center;" id="article1"> The advantages and disadvantages of running one’s own repair shop</h3>
                         <h5 style="text-align: center;"> 2023-01-22</h5>
+                        <div>
+                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/OwnBusinessImg.jpg">
+                        </div>
                         <p class="blog-blog">
                             &emsp; &emsp;Since 2020 I have been running my own repair shop for smartphones and other mobile devices. During this time I’ve got many experiences, good ones but also bad ones. Many people think that running their own business has only benefits and they forget or don’t even think about the negatives.
                             <br><br> &emsp; &emsp;First,  I have to say I have never regretted that I went down this path in my life. I am the master of my time and every single decision I have in my hands. I consider that the biggest benefit. Nobody is standing above you all day and gives you hard times. You are the one who is in charge. If you are uncomfortable with something, you just don’t do it.
@@ -118,6 +121,9 @@
                         <!-- ABOUT PARAGRAPH -->
                         <h3 style="text-align: center;" id="article2"> Learning programming on your own - the hurdles and the pleasures </h3>
                         <h5 style="text-align: center;"> 2023-01-29</h5>
+                        <div>
+                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/ProgrammingBlogImg.webp">
+                        </div>
                         <p class="blog-blog">
                             &emsp; &emsp;There are many people in the world who work as programmers. But not everyone went to college and studied programming. Some of them are learning programming on their own. Is it possible to study on your own and be on the same level of knowledge as a college student? No, haha.
                             <br><br> &emsp; &emsp;Personally, I am also learning programming on my own. We are living in the times when we have many many options in how to learn something and we are surrounded with information. I consider it   a hurdle in my journey. Sometimes you just don’t know how to start and where to start. What is important and let’s say what is less important to know at that moment. Yes, there are many courses out there but you as an amateur have no idea if it's the right way. This applies to all the articles, online forums and every other place where you can learn. On the contrary to college  where your study is provided by experienced professors. 
@@ -145,6 +151,9 @@
                         <!-- ABOUT PARAGRAPH -->
                         <h3 style="text-align: center;" id="article3"> Summary - The Key to Success in College Is So Simple, It’s Almost Never Mentioned, NY Times</h3>
                         <h5 style="text-align: center;"> 2023-02-05</h5>
+                        <div>
+                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/CollegeSuccessImg.jfif">
+                        </div>
                         <p class="blog-blog">
                             &emsp; &emsp;At the beginning of the article we meet Emily Zurek Small. She is a former college student and she is a nice example of the idea of the article. 
 	                        <br><br> &emsp; &emsp;The main idea of the article is what is a common mistake of many students around the globe. The main difference between Ms. Emily and many other students is a willingness to learn. 
@@ -175,6 +184,9 @@
                         <!-- ABOUT PARAGRAPH -->
                         <h3 style="text-align: center;" id="article4">Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 1</h3>
                         <h5 style="text-align: center;"> 2023-02-12</h5>
+                        <div>
+                            <img style="float: left; height: 200px; width: 250px; margin-right: 20px;" src="web_cv/SmallChangesImg.jpg">
+                        </div>
                         <p class="blog-blog">
                             &emsp; &emsp;The main point of this chapter is to introduce to you how even tiny changes may change your life. In this chapter we have nice examples from real life.
                             <br><br> &emsp; &emsp;The British Cycling Organization was struggling for many years for poor results. In 2003 they recast the performance director and he came with that philosophy. He had made small but many changes in every possible place. The reaction to those changes was a significant improvement for professional riders. 
@@ -204,6 +216,9 @@
                         <!-- ABOUT PARAGRAPH -->
                         <h3 style="text-align: center;" id="article5">Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 2</h3>
                         <h5 style="text-align: center;"> 2023-02-19</h5>
+                        <div>
+                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/ThreeLayersImg.png">
+                        </div>
                         <p class="blog-blog">
                             &emsp; &emsp;The second chapter is trying to explain why it is easier to repeat bad habits, and why it is much harder to create new ones. The author describes that there are two reasons why it is challenging to change our habits. We are trying to change the wrong things and we are changing it in the wrong way. In this chapter we are going to look at the first one.       
                             <br><br> &emsp; &emsp;Three layers of behaviour change are outcomes, processes and identity. First one, change outcomes, describe mostly our goals. What we want to achieve. The second layer - processes, under this layer belongs the ways that can get us to achieve our goals. The deepest layer is the identity layer. This layer refers to changes such as your mindset or worldview. 
@@ -231,6 +246,9 @@
                         <!-- ABOUT PARAGRAPH -->
                         <h3 style="text-align: center;" id="article6">Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 3 </h3>
                         <h5 style="text-align: center;"> 2023-02-26</h5>
+                        <div>
+                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/CueCrawingImg.png">
+                        </div>
                         <p class="blog-blog">
                             &emsp; &emsp;Psychologist Edward Thorndike was doing an experiment with cats. He discovered that repeating one action that gives us pleasure and reward is better to build a habit than an action which doesn't have a good and positive effect on us. This is the key to successfully creating a habit.
                             <br><br> &emsp; &emsp;Habits are behaviours and actions that we repeat many times, and our mind does it automatically. Habits are shortcuts that make our lives easier.  
@@ -262,11 +280,14 @@
                         <!-- ABOUT PARAGRAPH -->
                         <h3 style="text-align: center;" id="article7" > Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 4 </h3>
                         <h5 style="text-align: center;"> 2023-03-05</h5>
+                        <div>
+                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px;" src="web_cv/pointingCalling.png">
+                        </div>
                         <p class="blog-blog">
                             &emsp; &emsp;Chapter 4 starts with a story about a paramedic woman who saves the life of her father-in-law and about military analysts and their work with radar systems. Those stories have one thing in common and that is - if you are doing something repeatedly, your brain starts noticing important things, learning patterns and storing them for future use.
                             <br><br> &emsp; &emsp;If you get enough experience with some specific thing, your brain is able to detect and deal with it without thinking about it - automatically. Those experiences may print directly into your unconscious mind. This can have a positive influence for good habits but also it could be dangerous for the bad ones.
                             <br><br> &emsp; &emsp;If we want to build a new habit, it is important to take control over existing ones. It could be hard because they are mostly subconscious and you are doing it automatically.
-                            <br><br> &emsp; &emsp;There is a process named Pointing-and-Calling. The main idea is that while you are doing something, you point at things and name them out loud. With this approach your consciousness takes control over this action. 
+                            There is a process named Pointing-and-Calling. The main idea is that while you are doing something, you point at things and name them out loud. With this approach your consciousness takes control over this action. 
                             <br><br> &emsp; &emsp;It is wrong to call habits with names such as good or bad. It always depends on your goal. If you want to lose weight, maybe it is good for you to eat less, but for other people who want to gain some muscle, eating is important and prosperous. It is a good approach to scoring your habits and giving them value. 
 
                         </p>
@@ -291,10 +312,12 @@
                         <!-- ABOUT PARAGRAPH -->
                         <h3 style="text-align: center;" id="article8" > Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 5 </h3>
                         <h5 style="text-align: center;"> 2023-03-12</h5>
+                        <div>
+                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px; " src="web_cv/PlanningImg.jpg">
+                        </div>
                         <p class="blog-blog">
                             &emsp; &emsp;Chapter 5 begins with an experiment from 2001. Researchers from Great Britain were working with 248 people and the main point of the experiment was starting a new habit - exercise. People were divided into 3 groups. The first group had only one task, to track how often they exercised. The second group had to read about the exercise itself - what are the benefits of exercise for health. The third group had one additional task, they also had to prepare a schedule for the exercise, when - what time - where.The results were clear. The first and the second groups had similar results. But the third one had much better results.
                             <br><br> &emsp; &emsp;An Interesting thing about this experiment is that the second and the third group had the same motivation. Both groups had read about the benefits of exercise for the human body but the third group has much better results. The key is making a plan. With a plan you are aware of where and what exactly you should be doing at any time.
-                            <br><br> &emsp; &emsp;If we want to build a new habit, it is important to take control over existing ones. It could be hard because they are mostly subconscious and you are doing it automatically.
                             <br><br> &emsp; &emsp;The main idea of this chapter is that for establishing a new habit it is important to write down when and where you will do it and not just randomly do it without planning. 
                             <br><br> &emsp; &emsp;Author’s favourite approach is called habit stacking. The idea is that the new habit should be included in or after an existing one.
                         </p>
@@ -319,6 +342,9 @@
                         <!-- ABOUT PARAGRAPH -->
                         <h3 style="text-align: center;" id="IBM" >My first month @ IBM </h3>
                         <h5 style="text-align: center;"> 2023-03-18</h5>
+                        <div>
+                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px;" src="web_cv/Badge photo.jpg">
+                        </div>
                         
                         <p class="blog-blog">
                             &emsp; &emsp;On March the 1st it has been exactly a month since I started at IBM. Maybe a month is not a long time but many things have happened. Let me share with you a few experiences and feelings that I have had during this period of time.
@@ -350,7 +376,9 @@
                         <!-- ABOUT PARAGRAPH -->
                         <h3 style="text-align: center;" id="article9" >Atomic Habits, James Clear, Tiny Changes-Remarkable Results, Chapter 6</h3>
                         <h5 style="text-align: center;"> 2023-03-18</h5>
-                        
+                        <div>
+                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px;" src="web_cv/EnvironmentImg.webp">
+                        </div>
                         <p class="blog-blog">
                             &emsp; &emsp;The 6th chapter starts with an example from real life. A primary care physician Anne Thorndike proved that it is possible to improve eating habits without changing the motivation or willpower of hospital staff and visitors but the change happened by reorganising the cafeteria.
                             <br><br> &emsp; &emsp;Every living being senses and understands the world differently. We, as human beings, are counting on our senses, such as sight, hearing, touch, smell and taste. Our most powerful sense is sight. This is the reason why even a small change of what you see, may have a big impact on what you do.
