--- a/blog.html
+++ b/blog.html
@@ -100,10 +100,16 @@
                             <br><br> &emsp; &emsp;As I said earlier, running my own business has many disadvantages as well. As an employee you are covered if you are sick for example, or currently you are struggling with getting enough customers. Your employer pays you your salary no matter what. If you are not working, you aren't making any money. It is simple. If you are lazy, or you aren’t innovative, your business will never grow and get bigger. In my case, I am dealing directly with the customers and that is very difficult. Sometimes, I order spare parts for a customer and then he doesn't show up. That means spare parts are never used and I lose money. Just to give a fresh example from last week, parcel service damaged my package. This is also an unpleasant event because my customer is waiting for my service and the problem happened on my site and I was incapable of resolving this situation.
                             <br><br> &emsp; &emsp;To summarise, running a business is not for everyone. It depends on your mindset, you also need a little bit of courage and you must be able to solve problems at runtime. If you have a good idea, then my advice is to go for it. If everything goes well, then great, otherwise you will only be smarter for the future. 
                         </p>
-                        <div style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" data-layout="" data-size="">
+                        <div style="margin-left: 80%; margin-top: 20px; display: flex;">
+                            <div style="margin: auto; margin-right: 5px;">
+                                <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
+                                <script type="IN/Share" data-url="https://www.linkedin.com"></script>
+                            </div>
+                            <div class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" data-layout="" data-size="">
                             <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article1&amp;src=sdkpreparse"" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
+                        </div>
                         </div>
                     </div>
                 </div>
