--- a/experimental/index.html
+++ b/experimental/index.html
@@ -7,7 +7,7 @@
     <title>Share Buttons </title>
     <!-- You can use Open Graph tags to customize link previews.
     Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
-    <meta property="og:url"           content="https://www.your-domain.com/your-page.html" />
+    <meta property="og:url"           content="https://steinerrob.github.io/experimental/index.html" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Your Website Title" />
     <meta property="og:description"   content="Your description" />
@@ -25,7 +25,7 @@ fjs.parentNode.insertBefore(js, fjs);
 
 
 <div class="fb-share-button" 
-data-href="https://steinerrob.github.io/blog" 
+data-href="https://steinerrob.github.io/experimental/index.html" 
 data-layout="button">
 </div>
 </body>
