--- a/experimental/index.html
+++ b/experimental/index.html
@@ -24,9 +24,9 @@ fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
 <script>
-    document.getElementById("buttonshare").addEventListener("click", myFunction);
+    document.addEventListener("click", myFunction);
     function myFunction(){
-        document.getElementById("myTitle").style.color = 'red';
+        alert(" hello");
     }
 
 </script>
