--- a/experimental/index.html
+++ b/experimental/index.html
@@ -21,6 +21,8 @@ if (d.getElementById(id)) return;
 js = d.createElement(s); js.id = id;
 js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
 fjs.parentNode.insertBefore(js, fjs);
+alert("Button components loaded");
+
 }(document, 'script', 'facebook-jssdk'));</script>
 
 <script>
@@ -34,8 +36,11 @@ fjs.parentNode.insertBefore(js, fjs);
 data-href="https://steinerrob.github.io/experimental/index.html" 
 data-layout="button">
 </div>
+
+
+
 <div>
-    <H1 id="myTitle">1</H1>
+    <H1 id="myTitle">2</H1>
 </div>
 </body>
 </html>
