--- a/experimental/index.html
+++ b/experimental/index.html
@@ -30,7 +30,7 @@ fjs.parentNode.insertBefore(js, fjs);
     }
 
 </script>
-<div id="buttonshare" onclick="alert('hello pici')" class="fb-share-button" 
+<div type="button" id="buttonshare" onclick="alert('hello pici')" class="fb-share-button" 
 data-href="https://steinerrob.github.io/experimental/index.html" 
 data-layout="button">
 </div>
