--- a/experimental/index.html
+++ b/experimental/index.html
@@ -30,11 +30,11 @@ fjs.parentNode.insertBefore(js, fjs);
     }
 
 </script>
-<div type="button" id="buttonshare" onclick="alert('hello pici');" class="fb-share-button" 
+<div type="button" id="buttonshare"  class="fb-share-button" 
 data-href="https://steinerrob.github.io/experimental/index.html" 
 data-layout="button">
 </div>
-
+<button onclick="alert('hello pici')"> press test </button>
 
 
 <div>
