--- a/experimental/index.html
+++ b/experimental/index.html
@@ -34,11 +34,11 @@ fjs.parentNode.insertBefore(js, fjs);
 data-href="https://steinerrob.github.io/experimental/index.html" 
 data-layout="button">
 </div>
-<button class="fb-share-button" onclick="alert('hello pici')"> press test </button>
+<button class="fb-share-button" onclick="console.log('hello pici')"> press test </button>
 
 
 <div>
-    <H1 id="myTitle">7</H1>
+    <H1 id="myTitle">8</H1>
 </div>
 </body>
 </html>
