--- a/experimental/index.html
+++ b/experimental/index.html
@@ -23,19 +23,21 @@ js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
 fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<script>
-    document.getElementById("buttonshare").addEventListener("click", myFunction);
-    function myFunction(){
-        alert(" hello");
-    }
 
-</script>
-<div type="button" id="buttonshare"  class="fb-share-button" 
+<div  id="buttonshare1"  class="fb-share-button" 
 data-href="https://steinerrob.github.io/experimental/index.html" 
 data-layout="button">
 </div>
-<button class="fb-share-button" onclick="console.log('hello pici')"> press test </button>
 
+<div  id="buttonshare2"  class="fb-share-button" 
+data-href="https://steinerrob.github.io/experimental/index.html" 
+data-layout="button">
+</div>
+
+<div  id="buttonshare3"  class="fb-share-button" 
+data-href="https://steinerrob.github.io/experimental/index.html" 
+data-layout="button">
+</div>
 
 <div>
     <H1 id="myTitle">8</H1>
